--- a/project3rd/index.html
+++ b/project3rd/index.html
@@ -5,9 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- css file -->
     <link rel="stylesheet" href="index.css">
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+  <!-- Header part -->
+    <header>
+        <div><img src="./white-logo.png" alt="error"></div>
+        <div><a href="#">Our Menu</a>
+             <a href="#">Maps</a>
+             <a href="#">About</a>
+             <a href="#">Contact</a>
+        </div>
+        <div>
+            <button>Order</button>
+        </div>
+    </header>
+    <!-- Middle Body -->
+    <main>
+        <h1>A Restaurant That <br> Only Serves <br> Delicious Food</h1>
+        <button id="two">Read Our Menu</button>
+    </main>
+    <!-- Footer -->
+    <footer>
+        <img src="./scrool.png" alt="error">
+    </footer>
 </body>
 </html>
